--- a/Araç Kiralama Otomasyonu/Araç Kiralama Otomasyonu/Araç Kiralama Otomasyonu.csproj
+++ b/Araç Kiralama Otomasyonu/Araç Kiralama Otomasyonu/Araç Kiralama Otomasyonu.csproj
@@ -46,6 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="aracKiralamaDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>aracKiralamaDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +80,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="aracKiralamaDataSet.xsc">
+      <DependentUpon>aracKiralamaDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="aracKiralamaDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>aracKiralamaDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="aracKiralamaDataSet.xss">
+      <DependentUpon>aracKiralamaDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
