--- a/Araç Kiralama Otomasyonu/Araç Kiralama Otomasyonu/Araç Kiralama Otomasyonu.csproj
+++ b/Araç Kiralama Otomasyonu/Araç Kiralama Otomasyonu/Araç Kiralama Otomasyonu.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="aracKiralama.cs" />
     <Compile Include="aracKiralamaDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -57,19 +58,46 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="main.Designer.cs">
       <DependentUpon>main.cs</DependentUpon>
     </Compile>
+    <Compile Include="müsteriEkle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="müsteriEkle.Designer.cs">
+      <DependentUpon>müsteriEkle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="müsteriListele.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="müsteriListele.Designer.cs">
+      <DependentUpon>müsteriListele.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="main.resx">
       <DependentUpon>main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="müsteriEkle.resx">
+      <DependentUpon>müsteriEkle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="müsteriListele.resx">
+      <DependentUpon>müsteriListele.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
